fix: pdf button spacing

--- a/frontend/src/components/pdf/PDFComponent.css
+++ b/frontend/src/components/pdf/PDFComponent.css
@@ -6,8 +6,7 @@
 }
 
 .pdf-viewer-container button {
-  margin-left: 10px;
-  margin-right: 10px;
+  margin: 10px;
   height: 300px;
   width: 40px;
 }
